fix color scrollbar

--- a/css/general.css
+++ b/css/general.css
@@ -75,7 +75,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #fae5d3;
+  background-color: #fdf2e9;
   border-radius: 10px;
   width: 12px;
 }
